[FIX] FileUploader alignment issue in Internet Explorer
CSS: 0120031469 0000732251 2014

--- a/src/sap.ui.unified/src/sap/ui/unified/themes/base/FileUploader.less
+++ b/src/sap.ui.unified/src/sap/ui/unified/themes/base/FileUploader.less
@@ -20,6 +20,7 @@
 
 .sapUiFupGroup > div > div {
 	display: table-cell;
+	vertical-align: top;
 }
 
 .sapUiFupGroup > div > div:last-child {
